# RubiksCubeSolver

./: CMakeLists.txt  main.cpp
CubeModel/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
Solver/: DFSSolver.h  IDAstarSolver.h
